# themis-llm

./: .gitignore  .pre-commit-config.yaml  Makefile  README  README.md  env.example  pyproject.toml  requirements.txt  vllm-tools.py
.pre-commit/: .pylintrc
data/: config.yaml  log_config.json  logging.yaml
notebooks/: 0.1-ck-crows_pairs_mc.ipynb  0.1-ck-crows_pairs_qa.ipynb  age
tasks/crows_pairs/mc/: _crows_pairs_mc.yaml  age.yaml  disability.yaml  gender.yaml  nationality.yaml  orientation.yaml  physical_appearance.yaml  race_color.yaml  religion.yaml  socioeconomic.yaml  utils.py
tasks/crows_pairs/qa/: _crows_pairs_qa.yaml  age.yaml  disability.yaml  gender.yaml  nationality.yaml  orientation.yaml  physical_appearance.yaml  race_color.yaml  religion.yaml  socioeconomic.yaml  utils.py
themis/: __main__.py
themis/controller/: evaluator.py  indexer.py  logger.py
themis/data/crows_pairs/: crows_pairs.py
themis/definitions/: constants.py
themis/model/: model.py
themis/utils/: config.py  tools.py
